@@ -1,4 +1,5 @@
 AUTHORS
+bin/ccon
 bin/crsh
 bin/cscp
 bin/cssh
